<resources>
    <string name="app_name">Promise List</string>
    <string name="importance_normal">正常</string>
    <string name="importance_high">高</string>
    <string name="importance_low">低</string>
    <string name="choose_importance">优先级选择</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="new_task">新建任务</string>
    <string name="new_project">新建清单</string>
    <string name="new_tag">新建标签</string>
    <string name="new_tag_name">标签名称</string>
    <string name="label_fixed">已固定</string>
    <string name="label_others">其他</string>
    <string name="choose_color">颜色选择</string>
    <string name="tag_choose_dialog_label">设置标签</string>
    <string name="project_choose_dialog_label">设置清单</string>
    <string name="complete_task">完成任务</string>
    <string name="send">发送</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="complete">完成</string>
    <string name="setting">设置</string>
    <string name="add_tag">添加标签</string>
    <string name="add_project">添加清单</string>
    <string name="collection_box">收集箱</string>
    <string name="theme">主题</string>
    <string name="setting_preferences">偏好设置</string>
    <string name="setting_remind">提醒</string>
    <string name="notification_bar">通知栏</string>
    <string name="help">帮助</string>
    <string name="feedback">反馈</string>
    <string name="about">关于</string>
    <string name="application">应用程序</string>
    <string name="other">其他</string>
    <string name="all_projects">所有清单</string>
    <string name="today">今天</string>
    <string name="tag">标签</string>
    <string name="manage_projects">管理清单</string>
    <string name="manage_tags">管理标签</string>
    <string name="all_tasks">所有任务</string>
    <string name="title">标题</string>
    <string name="detail">详细</string>
    <string name="set_due_time">设置完成时间</string>
    <string name="about_me">关于我</string>
    <string name="update_log">更新日志</string>
    <string name="thank">感谢</string>
</resources>
