<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="30dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:textSize="20sp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="20sp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/tv_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy"
        android:textSize="20sp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/tv_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textSize="20sp"
        android:paddingBottom="10dp"/>


</LinearLayout>