<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.pfh.promiselist.widget.TaskListToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_scrollFlags="enterAlways|scroll" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutAnimation="@anim/task_list_layout_anim"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fb_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_plus"
            app:backgroundTint="@color/white"
            app:rippleColor="@color/deepskyblue"
            app:elevation="6dp"
            app:pressedTranslationZ="25dp"
            app:fabSize="normal"
            android:layout_margin="10dp"
            android:transitionName="add"/>

    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/skyblue">

            <com.pfh.promiselist.widget.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/avatar"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

        <com.pfh.promiselist.widget.NavigationItem
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:navigationName="@string/today"
            app:navigationIcon="@drawable/ic_today"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray"/>

        <com.pfh.promiselist.widget.NavigationItem
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:navigationName="@string/all_projects"
            app:navigationIcon="@drawable/ic_folder_grey"
            android:layout_marginLeft="20dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_projects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray"/>

        <com.pfh.promiselist.widget.NavigationItem
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:navigationName="@string/tag"
            app:navigationIcon="@drawable/ic_folder_grey"
            android:layout_marginLeft="20dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray"/>

        <com.pfh.promiselist.widget.NavigationItem
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:navigationName="@string/manage_projects"
            app:navigationIcon="@drawable/ic_pen"
            android:layout_marginLeft="20dp" />

        <com.pfh.promiselist.widget.NavigationItem
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:navigationName="@string/manage_tags"
            app:navigationIcon="@drawable/ic_pen"
            android:layout_marginLeft="20dp" />

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>


