<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/ll_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_high"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_flag"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance_high"
            android:paddingLeft="20dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/rb_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:clickable="false"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_nomal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_normal"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_flag"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance_normal"
            android:paddingLeft="20dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/rb_nomal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:clickable="false"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_low"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_low"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_flag"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance_low"
            android:paddingLeft="20dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/rb_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:clickable="false"/>

    </LinearLayout>

</LinearLayout>