<?xml version="1.0" encoding="utf-8"?>
<com.github.ksoichiro.android.observablescrollview.ObservableScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:clickable="true"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="170dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_me"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="#0087FC" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_about_me"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="afayp"
                        android:textColor="#0087FC"
                        android:textSize="15sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_github"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="github.com/afayp"
                        android:textColor="#0087FC"
                        android:textSize="15sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_blog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_blog"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="afayp.me"
                        android:textColor="#0087FC"
                        android:textSize="15sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_email"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="afayp007@gmail.com"
                        android:textColor="#0087FC"
                        android:textSize="15sp"/>
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_log"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:textColor="#0087FC" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thank"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="#0087FC" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="robolectric:robolectric"
                    android:textColor="#0087FC"
                    android:paddingLeft="20dp"
                    android:paddingBottom="20dp"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="wdullaer:materialdatetimepicker"
                    android:textColor="#0087FC"
                    android:paddingLeft="20dp"
                    android:paddingBottom="20dp"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="reactivex:rxjava"
                    android:textColor="#0087FC"
                    android:paddingLeft="20dp"
                    android:paddingBottom="20dp"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="bumptech.glide"
                    android:textColor="#0087FC"
                    android:paddingLeft="20dp"
                    android:paddingBottom="20dp"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="jakewharton:butterknife"
                    android:textColor="#0087FC"
                    android:paddingLeft="20dp"
                    android:paddingBottom="20dp"
                    android:textSize="15sp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>



</com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
